--- a/style.scss
+++ b/style.scss
@@ -17,4 +17,8 @@
 @import"./sass/video-section.scss";
 @import"./sass/promoting-section.scss";
 @import"./sass/video-section-2.scss";
+@import"./sass/second-promoting-section.scss";
+@import"./sass/img-cta-section.scss";
+@import"./sass/footer.scss";
+@import"./sass/bottom-bar.scss";
 
